--- a/sass/utilidades/_cartanatal.scss
+++ b/sass/utilidades/_cartanatal.scss
@@ -78,7 +78,9 @@
         align-items: center;
         img{
             width: 14rem;
+            filter: drop-shadow(5px 4px 3px);
         }
+
         h3{
             margin-bottom: 5rem;
         }
