--- a/sass/utilidades/_index.scss
+++ b/sass/utilidades/_index.scss
@@ -26,7 +26,7 @@ body{
         z-index: 999;
         border-radius: 50%;
         bottom: 20px;
-        right: 25px;
+        right: 20px;
         padding: 25px;
         transition: ease 0,3s;
         margin-bottom: 2rem;
@@ -45,6 +45,30 @@ body{
     .boton-wpp:hover{
         transform: scale(1.1);
         transition: 0.3s;
+    }
+    .boton-arriba{
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        position: fixed;
+        z-index: 999;
+        border-radius: 50%;
+        bottom: 200px;
+        right: 72px;
+        padding: 25px;
+        transition: ease 0,3s;
+        margin-bottom: 2rem;
+        .arriba{
+            color: $color-p
+                }
+         .imagen-arriba{
+            img{
+                width: 3rem;
+                height: 3rem;
+               }
+            
+        }
+    
     }
 }
 .contenedor-menu{
@@ -94,6 +118,7 @@ body{
             .mano{ 
                 width: 30rem;
                 height: 30rem;
+                filter: drop-shadow(5px -2px 1.5px);
             }
         }
         
@@ -145,6 +170,7 @@ section{
                background: #fffff0;
                margin-bottom: 2rem;
                overflow: hidden;
+               filter: drop-shadow(5px 4px 3px);
                 img{
                       width: 32rem;
                       height: 32rem;
@@ -179,10 +205,6 @@ section{
             }
         } 
 }
-    
-    
-
-
 // section de cursos y talleres (video)
 
 .section-cursos{
@@ -195,6 +217,8 @@ section{
             margin-top: 2rem;
             margin-bottom: 2rem;
             margin-right: 2rem;
+            filter: drop-shadow(5px 2px 3px);
+
         }
     }
     .texto-cursos{
@@ -221,6 +245,7 @@ section{
     align-items: center;
     margin-top: 1.5rem;
     margin-bottom: 1.5rem;
+    filter: drop-shadow(5px 4px 3px);
     .carousel-inner{
         div{
             .conociendo-pluton{
@@ -244,10 +269,6 @@ section{
         }
     }
     
-
-
-
-
 //footer del index
 footer{
     background: $color-footer;
@@ -278,6 +299,7 @@ footer{
                         width: 2.2rem;
                         height: 2.2rem;
                         margin-right: 0.3rem;
+                        filter: drop-shadow(2px 1px 3px);
                     }
                 }
             }
