--- a/sass/utilidades/_mediaqueries.scss
+++ b/sass/utilidades/_mediaqueries.scss
@@ -3,6 +3,10 @@
 
 @media (max-width:667px){
 //section carta natal
+html, body{
+    width: 100%!important;
+    overflow-x: hidden!important;
+}
 body{
     margin: 0;
     padding: 0;
